--- a/hw05-product-demo/src/main/resources/templates/products.html
+++ b/hw05-product-demo/src/main/resources/templates/products.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-<head>
+<head th:include="common :: headerFragment">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Products</title>
 </head>
 <body>
-
-<h1>Notes list</h1>
-<a href="/create" name="Create new note">Create new note</a>
+<div th:insert="common::nav"></div>
 <div>
+
     <table border="1">
         <tr>
             <th>Id</th>
-            <th>Lable</th>
+            <th>Label</th>
             <th>Price</th>
+            <th>Description</th>
             <th>Action</th>
         </tr>
         <tr th:each="product : ${products}">
             <td th:text="${product.getId()}"></td>
             <td th:text="${product.getLabel()}"></td>
             <td th:text="${product.getPrice()}"></td>
-            <td><a th:href="@{/delete/{id}(id=${product.getId()})}">Delete</a></td>
+            <td th:text="${product.getDescription()}"></td>
+            <td>
+                <a type="button" class="btn btn-danger"
+                   th:href="@{/delete/{id}(id=${product.getId()})}">Delete</a>
+
+                <a type="button" class="btn btn-info"
+                   th:href="@{/update/{id}(id=${product.getId()})}">Edit</a>
+            </td>
         </tr>
     </table>
 </div>
