--- a/hw06-spring-security-demo/src/main/resources/templates/notes.html
+++ b/hw06-spring-security-demo/src/main/resources/templates/notes.html
@@ -34,14 +34,12 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" href="pdfreport">Export to PDF</a>-->
-<!--            </li>-->
             <li class="nav-item">
                 <a class="nav-link" href="/login">Login page</a>
             </li>
-            <#if isAdmin>
+            <li class="nav-item">
+                <a class="nav-link" href="/sign-up">Sing Up</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="/notes/all">All notes</a>
             </li>
@@ -49,14 +47,9 @@
                 <a class="nav-link" href="/admin">admin</a>
             </li>
         </ul>
-<!--        </#if>-->
-
-<!--        </ul>-->
-<!--        <div class="navbar-text mr-3"><#if user??>${name}<#else>Please, login</#if></div>-->
-<!--    <#if user??><@l.logout /> <#else> <@l.login/>  </#if>-->
 </div>
 </nav>
-<h1>Notes list</h1>
+<h1> Notes list</h1>
 <a href="/notes/create" name="Create new note">Create new note</a>
 <div>
     <table border="1">
